--- a/index.html
+++ b/index.html
@@ -12,90 +12,89 @@
 <body>
     <main>
         <section>
-            <h1>
+            <h1 style="font-size: larger; margin: auto;">
                 Pk Produções
             </h1>
             <p>
                 <strong>Desenvolvimento de Software</strong>
             </p>
-                <picture id="picturePerfil">
-                    <img id="PERFIL" src="PERFIL.png" alt="perfil">
-                        <p>
-                            <strong>Brasil, MG Uberlândia</strong>
-                        </p>
-                        <p>
-                            <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-                        </p>
-                        <p>
-                            <strong>21 anos</strong>
-                        </p>
-                </picture>
-            <p>
-                <strong style="font-size: larger
-                ;">Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-            </p>
+            <picture id="picturePerfil">
+                <img id="PERFIL" src="PERFIL.png" alt="perfil">
+            </picture>
             <h1>
-                <strong>Aguardo ancioso para um entrevista.</strong>
+                Projetos
             </h1>
-                <aside class="links">
-                    <h1 style="padding-bottom: 25px;">
-                        Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
-                    </h1>
-                        <picture>
-                            <a href="https://www.facebook.com/profile.php?id=100016725942027">
-                                <source src="logoFacebook.jpg" type="">
-                            </a>
+            <button id="android">
+                <picture id="bugdroid">
+                    <img src="bugdroid.png">
+                </picture>
+                <a href="https://pablo-kennediy.github.io/Android_Site/">
+                    Android
+                </a>
+            </button>
+            <button id="netflix">
+                <picture id="logoNetflix">
+                    <img src="logoNetflix.png">
+                </picture>
+                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                    Netflix
+                </a>
+            </button>
+            <button id="twitter">
+                <picture id="logoTwitter">
+                    <img src="logoTwitter.png">
+                </picture>
+                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                    Twitter
+                </a>
+            </button>
+            <aside class="links">
+                <h2>
+                    Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
+                </h2>
+                <picture>
+                    <a href="https://www.facebook.com/profile.php?id=100016725942027">
+                        <source src="logoFacebook.jpg" type="">
+                    </a>
 
-                            <a href="https://www.instagram.com/euu_pabloo/">
-                                <img src="logoInstagram.png">
-                            </a>
+                    <a href="https://www.instagram.com/euu_pabloo/">
+                        <img src="logoInstagram.png">
+                    </a>
 
-                            <a href="https://twitter.com/PabloKennediy">
-                                <img src="logoTwitter.png">
-                            </a>
-                        </picture>
-                </aside>
-                    <aside>
-                        <h1>
-                            Ponto fortes
-                        </h1>
-                        <p>
-                            Proativo
-                        </p>
-                        <p>
-                            Responsavel
-                        </p>
-                        <p style="padding-bottom: 25px;">
-                            Analista
-                        </p>
-                        <h1>
-                            Projetos
-                        </h1>
-                            <button id="android">
-                                <picture id="bugdroid">
-                                    <img src="bugdroid.png">
-                                </picture>
-                                <a href="https://pablo-kennediy.github.io/Android_Site/">
-                                    Android
-                                </a>
-                            </button>
-                            <button id="netflix">
-                                <picture id="logoNetflix">
-                                    <img src="logoNetflix.png">
-                                </picture>
-                                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                                    Netflix
-                                </a>
-                            </button>
-                            <button id="twitter">
-                                <picture id="logoTwitter">
-                                    <img src="logoTwitter.png">
-                                </picture>
-                                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
-                                    Twitter
-                                </a>
-                            </button>
-                    </aside>
+                    <a href="https://twitter.com/PabloKennediy">
+                        <img src="logoTwitter.png">
+                    </a>
+                </picture>
+                <label>
+                    <strong>Brasil, MG Uberlândia</strong>
+                </label>
+                <label>
+                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
+                </label>
+                <label>
+                    <strong>21 anos</strong>
+                </label>
+            </aside>
+            <h2>
+                <strong>Aguardo ancioso para um entrevista.</strong>
+            </h2>
+            <p>
+                <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
+            </p>
+            <aside>
+                <label>
+                    Ponto fortes
+                </label>
+                <p>
+                    Proativo
+                </p>
+                <p>
+                    Responsavel
+                </p>
+                <p style="padding-bottom: 25px;">
+                    Analista
+                </p>
+            </aside>
         </section>
     </main>
 </body>
