Deixei mais bunitinho hj
Arrumei um monte de coisa, vou explicar nuncaaaa kkkk

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section>
-            <h1 style="font-size: larger; margin: auto;">
+            <h1>
                 Pk Produções
             </h1>
             <p>
@@ -26,9 +26,9 @@
             </h1>
             <button id="android">
                 <picture id="bugdroid">
-                    <img src="bugdroid.png">
+                    <img src="bugdroid.jpg">
                 </picture>
-                <a href="https://pablo-kennediy.github.io/Android_Site/">
+                <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
                     Android
                 </a>
             </button>
@@ -36,67 +36,68 @@
                 <picture id="logoNetflix">
                     <img src="logoNetflix.png">
                 </picture>
-                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/" target="_blank">
                     Netflix
                 </a>
             </button>
             <button id="twitter">
                 <picture id="logoTwitter">
-                    <img src="logoTwitter.png">
+                    <img src="logoTwitter.png" target="_blank">
                 </picture>
-                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
                     Twitter
                 </a>
             </button>
-            <aside class="links">
-                <h2>
-                    Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
-                </h2>
-                <picture>
-                    <a href="https://www.facebook.com/profile.php?id=100016725942027">
-                        <source src="logoFacebook.jpg" type="">
-                    </a>
 
-                    <a href="https://www.instagram.com/euu_pabloo/">
-                        <img src="logoInstagram.png">
-                    </a>
-
-                    <a href="https://twitter.com/PabloKennediy">
-                        <img src="logoTwitter.png">
-                    </a>
-                </picture>
-                <label>
-                    <strong>Brasil, MG Uberlândia</strong>
-                </label>
-                <label>
-                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-                </label>
-                <label>
-                    <strong>21 anos</strong>
-                </label>
-            </aside>
+            <label>
+                <strong>Brasil, MG Uberlândia</strong>
+            </label>
+            <label>
+                <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
+            </label>
+            <label>
+                <strong>21 anos</strong>
+            </label>
             <h2>
                 <strong>Aguardo ancioso para um entrevista.</strong>
             </h2>
             <p>
                 <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
             </p>
-            <aside>
-                <label>
-                    Ponto fortes
-                </label>
-                <p>
-                    Proativo
-                </p>
-                <p>
-                    Responsavel
-                </p>
-                <p style="padding-bottom: 25px;">
-                    Analista
-                </p>
-            </aside>
-        </section>
+            <h1>
+                Ponto fortes
+            </h1>
+            <p>
+                Proativo
+            </p>
+            <p>
+                Responsavel
+            </p>
+            <p style="padding-bottom: 25px;">
+                Analista
+            </p>
+            <h2>
+                Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
+            </h2>
+            <picture id="links">
+                <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
+                    <img src="logoFacebook.jpg" s>
+                </a>
+
+                <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
+                    <img src="logoInstagram.png">
+                </a>
+
+                <a href="https://twitter.com/PabloKennediy" target="_blank">
+                    <img src="logoTwitter.png">
+                </a>
+            </picture>
     </main>
+    <footer>
+        <p>
+            Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
+        </p>
+    </footer>
 </body>
 
 </html>
