--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     Twitter
                 </a>
             </button>
-
+            <h2>
+                <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
+            </h2>
             <label>
                 <strong>Brasil, MG Uberlândia</strong>
             </label>
@@ -58,41 +60,34 @@
             <label>
                 <strong>21 anos</strong>
             </label>
-            <h2>
-                <strong>Aguardo ancioso para um entrevista.</strong>
-            </h2>
-            <p>
-                <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-            </p>
             <h1>
                 Ponto fortes
             </h1>
-            <p>
-                Proativo
-            </p>
-            <p>
-                Responsavel
-            </p>
             <p style="padding-bottom: 25px;">
+                Proativo <br>
+                Responsavel <br>
                 Analista
             </p>
-            <h2>
-                Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
-            </h2>
-            <picture id="links">
-                <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
-                    <img src="logoFacebook.jpg" s>
-                </a>
-
-                <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
-                    <img src="logoInstagram.png">
-                </a>
-
-                <a href="https://twitter.com/PabloKennediy" target="_blank">
-                    <img src="logoTwitter.png">
-                </a>
-            </picture>
     </main>
+    <h2>
+        <strong>Aguardo ancioso para um entrevista.</strong>
+    </h2>
+    <p>
+        Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
+    </p>
+    <picture id="links">
+        <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
+            <img src="logoFacebook.jpg" s>
+        </a>
+
+        <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
+            <img src="logoInstagram.png">
+        </a>
+
+        <a href="https://twitter.com/PabloKennediy" target="_blank">
+            <img src="logoTwitter.png">
+        </a>
+    </picture>
     <footer>
         <p>
             Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
