--- a/index.html
+++ b/index.html
@@ -10,84 +10,89 @@
 </head>
 
 <body>
-    <main>
-        <section>
-            <h1 id="pai">
-                Pk Produções
-            </h1>
-            <p>
-                <strong>Desenvolvimento de Software</strong>
-            </p>
-            <picture id="picturePerfil">
-                <img id="PERFIL" src="PERFIL.png" alt="perfil">
-            </picture>
-            <h1>
-                Projetos
-            </h1>
-            <button id="android">
-                <picture id="bugdroid">
-                    <img src="bugdroid.jpg">
-                </picture>
-                <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
-                    Android
-                </a>
-            </button>
-            <button id="netflix">
-                <picture id="logoNetflix">
-                    <img src="logoNetflix.png">
-                </picture>
-                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/" target="_blank">
-                    Netflix
-                </a>
-            </button>
-            <button id="twitter">
-                <picture id="logoTwitter">
-                    <img src="logoTwitter.png" target="_blank">
-                </picture>
-                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
-                    Twitter
-                </a>
-            </button>
-            <h2>
-                <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-            </h2>
-            <label>
-                <strong>Brasil, MG Uberlândia</strong>
-            </label>
-            <label>
-                <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-            </label>
-            <label>
-                <strong>21 anos</strong>
-            </label>
-            <h1>
-                Ponto fortes
-            </h1>
-            <p style="padding-bottom: 25px;">
-                Proativo <br>
-                Responsavel <br>
-                Analista
-            </p>
-    </main>
-    <h2>
-        <strong>Aguardo ancioso para um entrevista.</strong>
-    </h2>
-    <p>
-        Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
-    </p>
-    <picture id="links">
-        <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
-            <img src="logoFacebook.jpg" s>
-        </a>
+    <article id="primeiro" class="normal">
+        <h1>
+            Desenvolvedor de Software
+        </h1>
+    </article>
 
-        <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
-            <img src="logoInstagram.png">
-        </a>
+        <main>
+            <section id="forMain">
+                <aside>
 
-        <a href="https://twitter.com/PabloKennediy" target="_blank">
-            <img src="logoTwitter.png">
-        </a>
+    <picture id="picturePerfil">
+        <img id="PERFIL" src="PERFIL.png" alt="perfil">
     </picture>
+                        <p>
+                            <strong>Pk Produções</strong>
+                        </p>
+                </aside>
+                    <div class="projetos">
+                    <h1>
+                        Projetos
+                    </h1>
+                    <button id="android">
+                        <picture id="bugdroid">
+                            <img src="bugdroid.jpg">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
+                            Android
+                        </a>
+                    </button>
+                    <button id="netflix">
+                        <picture id="logoNetflix">
+                            <img src="logoNetflix.png">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/" target="_blank">
+                            Netflix
+                        </a>
+                    </button>
+                    <button id="twitter">
+                        <picture id="logoTwitter">
+                            <img src="logoTwitter.png" target="_blank">
+                        </picture>
+                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
+                            Twitter
+                        </a>
+                    </button>
+                <h2>
+                    <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
+                </h2>
+                    </div>
+                <label>
+                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
+                </label>
+                <label>
+                    <strong>21 anos</strong>
+                </label>
+            </section>
+        </main>
+
+            <article class="normal">
+                <h2>
+                    <strong>Aguardo ancioso para um entrevista.</strong>
+                </h2>
+                <p>
+                    Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
+                </p>
+                <picture id="links">
+                    <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
+                        <img src="logoFacebook.png">
+                    </a>
+
+                    <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
+                        <img src="logoInstagram.png">
+                    </a>
+
+                    <a href="https://twitter.com/PabloKennediy" target="_blank">
+                        <img src="logoTwitter.png">
+                    </a>
+                </picture>
+                <p>
+                    <strong>Brasil, MG Uberlândia</strong>
+                </p>
+            </article>
+
     <footer>
         <p>
             Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
