--- a/index.html
+++ b/index.html
@@ -16,86 +16,97 @@
         </h1>
     </article>
 
-        <main>
-            <section id="forMain">
-                <aside>
+    <main>
+        <section id="forMain">
+            <aside>
 
-    <picture id="picturePerfil">
-        <img id="PERFIL" src="PERFIL.png" alt="perfil">
-    </picture>
-                        <p>
-                            <strong>Pk Produções</strong>
-                        </p>
-                </aside>
-                    <div class="projetos">
+                <picture id="picturePerfil">
+                    <img id="PERFIL" src="PERFIL.png" alt="perfil">
+                </picture>
+                <p>
+                    <strong>Pk Produções</strong>
+                </p>
+            </aside>
+
+            <aside>
+                <div class="projetos">
                     <h1>
                         Projetos
                     </h1>
+
                     <button id="android">
-                        <picture id="bugdroid">
-                            <img src="bugdroid.jpg">
-                        </picture>
                         <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
-                            Android
+                            <div class="projetos0">
+                                <picture id="bugdroid">
+                                    <img src="bugdroid.jpg">
+                                </picture>
+                            </div>
                         </a>
                     </button>
+
                     <button id="netflix">
-                        <picture id="logoNetflix">
-                            <img src="logoNetflix.png">
-                        </picture>
                         <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/" target="_blank">
-                            Netflix
+                            <div class="projetos0">
+                                <picture id="logoNetflix">
+                                    <img src="logoNetflix.png">
+                                </picture>
+                            </div>
                         </a>
                     </button>
+
                     <button id="twitter">
-                        <picture id="logoTwitter">
-                            <img src="logoTwitter.png" target="_blank">
-                        </picture>
                         <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
-                            Twitter
+                            <div class="projetos0">
+                                <picture id="logoTwitter">
+                                    <img src="logoTwitter.png" target="_blank">
+                                </picture>
+                            </div>
                         </a>
                     </button>
-                <h2>
-                    <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-                </h2>
-                    </div>
-                <label>
+
+                    <p>
+                        <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
+                    </p>
+                </div>
+                <p>
                     <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-                </label>
-                <label>
+                </p>
+                <p>
                     <strong>21 anos</strong>
-                </label>
-            </section>
-        </main>
-
-            <article class="normal">
-                <h2>
-                    <strong>Aguardo ancioso para um entrevista.</strong>
-                </h2>
-                <p>
-                    Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
                 </p>
-                <picture id="links">
-                    <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
-                        <img src="logoFacebook.png">
-                    </a>
+            </aside>
+        </section>
+    </main>
 
-                    <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
-                        <img src="logoInstagram.png">
-                    </a>
+    <article class="normal">
+        <h2>
+            <strong>Aguardo ancioso para um entrevista.</strong>
+        </h2>
+        <p>
+            Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
+        </p>
+        <picture id="links">
+            <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
+                <img src="logoFacebook.png">
+            </a>
 
-                    <a href="https://twitter.com/PabloKennediy" target="_blank">
-                        <img src="logoTwitter.png">
-                    </a>
-                </picture>
-                <p>
-                    <strong>Brasil, MG Uberlândia</strong>
-                </p>
-            </article>
+            <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
+                <img src="logoInstagram.png">
+            </a>
+
+            <a href="https://twitter.com/PabloKennediy" target="_blank">
+                <img src="logoTwitter.png">
+            </a>
+        </picture>
+        <p>
+            <strong>Brasil, MG Uberlândia</strong>
+        </p>
+    </article>
 
     <footer>
         <p>
-            Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
+            Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a
+                href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
         </p>
     </footer>
 </body>
