--- a/index.html
+++ b/index.html
@@ -18,73 +18,77 @@
 
     <main>
         <section id="forMain">
-            <aside>
-
-                <picture id="picturePerfil">
-                    <img id="PERFIL" src="PERFIL.png" alt="perfil">
-                </picture>
-                <p>
-                    <strong>Pk Produções</strong>
-                </p>
-            </aside>
-
-            <aside>
-                <div class="projetos">
+            <label>
+                <strong>Brasil, MG Uberlândia</strong>
+            </label>
+            <div class="forMain">
+                <aside>
+                    <picture id="picturePerfil">
+                        <img id="PERFIL" src="PERFIL.png" alt="perfil">
+                    </picture>
                     <h1>
-                        Projetos
+                        Pk Produções
                     </h1>
+                </aside>
+            </div>
+            <div class="forMain">
+                <aside>
+                    <div class="projetos">
+                        <h1>
+                            Projetos
+                        </h1>
+                        <section>
+                            <button id="android">
+                                <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
+                                    <div class="projetos0">
+                                        <picture id="bugdroid">
+                                            <img src="bugdroid.jpg">
+                                        </picture>
+                                    </div>
+                                </a>
+                            </button>
 
-                    <button id="android">
-                        <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
-                            <div class="projetos0">
-                                <picture id="bugdroid">
-                                    <img src="bugdroid.jpg">
-                                </picture>
-                            </div>
-                        </a>
-                    </button>
+                            <button id="netflix">
+                                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/" target="_blank">
+                                    <div class="projetos0">
+                                        <picture id="logoNetflix">
+                                            <img src="logoNetflix.png">
+                                        </picture>
+                                    </div>
+                                </a>
+                            </button>
 
-                    <button id="netflix">
-                        <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/" target="_blank">
-                            <div class="projetos0">
-                                <picture id="logoNetflix">
-                                    <img src="logoNetflix.png">
-                                </picture>
-                            </div>
-                        </a>
-                    </button>
+                            <button id="twitter">
+                                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
+                                    <div class="projetos0">
+                                        <picture id="logoTwitter">
+                                            <img src="logoTwitter.png" target="_blank">
+                                        </picture>
+                                    </div>
+                                </a>
+                            </button>
+                        </section>
 
-                    <button id="twitter">
-                        <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
-                            <div class="projetos0">
-                                <picture id="logoTwitter">
-                                    <img src="logoTwitter.png" target="_blank">
-                                </picture>
-                            </div>
-                        </a>
-                    </button>
-
-                    <p>
-                        <strong>Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.</strong>
-                    </p>
-                </div>
-                <p>
-                    <strong>Sr. Pablo Kennediy Almeida Oliveira</strong>
-                </p>
-                <p>
-                    <strong>21 anos</strong>
-                </p>
-            </aside>
+                        <section>
+                            <p>
+                                Aqui desenvolvemos ambientes digitais que tem com ênfase conectar pessoas.
+                            </p>
+                        </section>
+                    </div>
+                </aside>
+            </div>
         </section>
+
     </main>
 
     <article class="normal">
-        <h2>
+        <h1>
             <strong>Aguardo ancioso para um entrevista.</strong>
-        </h2>
+        </h1>
         <p>
             Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
         </p>
+        <section>
         <picture id="links">
             <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
                 <img src="logoFacebook.png">
@@ -98,9 +102,7 @@
                 <img src="logoTwitter.png">
             </a>
         </picture>
-        <p>
-            <strong>Brasil, MG Uberlândia</strong>
-        </p>
+    </section>
     </article>
 
     <footer>
