--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
     <article id="primeiro" class="normal">
+        <picture>
+            <img style="float: left; margin-top: 1vh;" src="iconsMoon.png" alt="">
+        </picture>
         <h1>
             Desenvolvedor de Software
         </h1>
     </article>
-
     <main>
         <section id="forMain">
             <label>
@@ -23,12 +25,12 @@
             </label>
             <div class="forMain">
                 <aside>
-                    <picture id="picturePerfil">
-                        <img id="PERFIL" src="PERFIL.png" alt="perfil">
-                    </picture>
                     <h1>
                         Pk Produções
                     </h1>
+                    <picture id="picturePerfil">
+                        <img id="PERFIL" src="PERFIL.png" alt="perfil">
+                    </picture>
                 </aside>
             </div>
             <div class="forMain">
@@ -78,9 +80,7 @@
                 </aside>
             </div>
         </section>
-
     </main>
-
     <article class="normal">
         <h1>
             <strong>Aguardo ancioso para um entrevista.</strong>
@@ -89,17 +89,16 @@
             Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
         </p>
         <section>
-        <picture id="links">
-            <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
-                <img src="logoFacebook.png">
-            </a>
-            <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
-                <img src="logoInstagram.png">
-            </a>
-        </picture>
-    </section>
+            <picture id="links">
+                <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
+                    <img src="logoFacebook.png">
+                </a>
+                <a href="https://www.instagram.com/euu_pabloo/" target="_blank">
+                    <img src="logoInstagram.png">
+                </a>
+            </picture>
+        </section>
     </article>
-
     <footer>
         <p>
             Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a
