--- a/index.html
+++ b/index.html
@@ -31,6 +31,38 @@
                     <picture id="picturePerfil">
                         <img id="PERFIL" src="PERFIL.png" alt="perfil">
                     </picture>
+
+                        <h1>
+                            Formado em :
+                        </h1>
+
+                        <h1>
+                            Cursando :
+                        </h1>
+                    <picture id="picturePerfil" style="display: flexbox;">
+                        <img src="Forgaça.jfif" alt="">
+                    </picture>
+                    <h1>
+                        Instituto Fogaça
+                    </h1>
+                    <p>
+                        A Metodologia do Instituto Fogaça é tão EFICIÊNTE que quase te obriga a ter resultados…
+                        … é mais ou menos assim: Em cada etapa (aula) nós…
+
+                        – “(1) Explicamos os conteúdos” então…
+                        – “(2) Te mostramos exemplos práticos” depois…
+                        – “(3) Fazemos questões com você” e por último te mostramos…
+                        – “(4) Como acertar mais questões com as técnicas certas ”…
+
+                        … com isso seus resultados são excelentes… Além disso, em todo o processo eu te mostramos:
+
+                        – o que funcionou para os alunos que foram aprovados,
+                        – o que eles fizeram,
+                        – e te damos modelos prontos para você copiar todas as estratégias…
+
+                        Atualmente, Temos Centenas de Alunos Aprovados utilizando o nosso método e você pode ser o
+                        próximo aprovado. “Aprenda com Quem já Chegou lá!”
+                    </p>
                 </aside>
             </div>
             <div class="forMain">
