--- a/index.html
+++ b/index.html
@@ -10,56 +10,64 @@
 </head>
 
 <body>
+    <main>
     <article id="primeiro" class="normal">
         <picture>
             <img style="float: left; margin-top: 1vh;" src="iconsMoon.png" alt="">
         </picture>
-        <h1>
-            Desenvolvedor de Software
-        </h1>
     </article>
-    <main>
+
+        <h1>
+            Nike
+        </h1>
         <section id="forMain">
-            <label>
-                <strong>Brasil, MG Uberlândia</strong>
+            <h1 style="font-size: x-large;">
+                Desenvolvedor de Software
+            </h1>
+            <label style="font-size: small;">
+                Brasil, MG Uberlândia
             </label>
             <div class="forMain">
                 <aside>
-                    <h1>
-                        Pk Produções
-                    </h1>
                     <picture id="picturePerfil">
                         <img id="PERFIL" src="PERFIL.png" alt="perfil">
                     </picture>
 
-                        <h1>
-                            Formado em :
-                        </h1>
+                    <p>
+                        21 anos
+                    </p>
 
-                        <h1>
-                            Cursando :
-                        </h1>
+                    <p>
+                        Desenvolvedor WEB com ênfase no front-end.
+                    </p>
+
+                    <p>
+                        Ferramentas e linguagens favoritas são ;
+                    </p>
+
+                    <p>JAVA, JAVASCRIPT, VSCODE - WEB, <br> DEV TOOLS, HY SPY, HTML5, TAILWIND CSS, <br> PAINT, GOOGLE
+                        SKI´s, CSS entre outros.</p>
+
+                    <h1>
+                        Cursando :
+                    </h1>
                     <picture id="picturePerfil" style="display: flexbox;">
                         <img src="Forgaça.jfif" alt="">
                     </picture>
                     <h1>
                         Instituto Fogaça
                     </h1>
-                    <p>
+                    <p style="max-width: 600px;">
                         A Metodologia do Instituto Fogaça é tão EFICIÊNTE que quase te obriga a ter resultados…
                         … é mais ou menos assim: Em cada etapa (aula) nós…
-
                         – “(1) Explicamos os conteúdos” então…
                         – “(2) Te mostramos exemplos práticos” depois…
                         – “(3) Fazemos questões com você” e por último te mostramos…
                         – “(4) Como acertar mais questões com as técnicas certas ”…
-
                         … com isso seus resultados são excelentes… Além disso, em todo o processo eu te mostramos:
-
                         – o que funcionou para os alunos que foram aprovados,
                         – o que eles fizeram,
                         – e te damos modelos prontos para você copiar todas as estratégias…
-
                         Atualmente, Temos Centenas de Alunos Aprovados utilizando o nosso método e você pode ser o
                         próximo aprovado. “Aprenda com Quem já Chegou lá!”
                     </p>
@@ -114,13 +122,16 @@
         </section>
     </main>
     <article class="normal">
+
+    </article>
+    <footer>
         <h1>
             <strong>Aguardo ancioso para um entrevista.</strong>
         </h1>
         <p>
             Clique em qualquer um dos botões para falar comigo para entrar com contato comigo
         </p>
-        <section>
+        <article>
             <picture id="links">
                 <a href="https://www.facebook.com/profile.php?id=100016725942027" target="_blank">
                     <img src="logoFacebook.png">
@@ -129,9 +140,7 @@
                     <img src="logoInstagram.png">
                 </a>
             </picture>
-        </section>
-    </article>
-    <footer>
+        </article>
         <p>
             Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a
                 href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
