--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body>
     <main>
-    <article id="primeiro" class="normal">
-        <picture>
-            <img style="float: left; margin-top: 1vh;" src="iconsMoon.png" alt="">
-        </picture>
-    </article>
-
+        <article id="primeiro" class="normal">
+            <picture>
+                <img style="float: left; margin-top: 1vh;" src="iconsMoon.png" alt="">
+            </picture>
+        </article>
         <h1>
             Nike
         </h1>
@@ -29,18 +28,15 @@
             </label>
             <div class="forMain">
                 <aside>
-                    <picture id="picturePerfil">
+                    <picture id="picturePerfil" media="min-width: 600px"> 
                         <img id="PERFIL" src="PERFIL.png" alt="perfil">
                     </picture>
-
                     <p>
                         21 anos
                     </p>
-
                     <p>
                         Desenvolvedor WEB com ênfase no front-end.
                     </p>
-
                     <p>
                         Ferramentas e linguagens favoritas são ;
                     </p>
