--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="normal" id="forMain">
-        <a href="https://ezstat.ru/2JvLx4">
+        <a href="https://iplogger.com/2gnLZ3">
             <button type="button" id="ixd01">
                 Portifolio
             </button>
