--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
 </head>
 
 <body>
-    <div class="normal" id="forMain">
+    <main>
+        <h1>
+            NIKE <br>
+            Desenvolvedor de Sistemas
+        </h1>
+        <label for="">
+            Clique aqui para ter mais informações
+        </label>
         <a href="https://iplogger.com/2gnLZ3">
             <button type="button" id="ixd01">
                 Portifolio
             </button>
         </a>
-    </div>
+    </main>
+    <footer>
+        <h1>
+            <strong>
+                Aguardo ancioso para um entrevista.
+            </strong>
+        </h1>
+        <p>
+            Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a
+                href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
+        </p>
+    </footer>
 </body>
 
 </html>
