--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <main>
         <h1>
-            NIKE <br>
+            <strong> NIKE</strong> <br>
             Desenvolvedor de Sistemas
         </h1>
-        <label for="">
+        <p>
             Clique aqui para ter mais informações
-        </label>
+        </p>
         <a href="https://iplogger.com/2gnLZ3">
             <button type="button" id="ixd01">
                 Portifolio
@@ -23,15 +23,17 @@
         </a>
     </main>
     <footer>
-        <h1>
-            <strong>
-                Aguardo ancioso para um entrevista.
-            </strong>
-        </h1>
-        <p>
-            Desenvolvido por Pablo Kennediy usando linguagens de marcação para a empresa <br> <a
-                href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos Digitais</a>
-        </p>
+        <article>
+            <h1>
+                <strong>
+                    Aguardo ancioso para um entrevista.
+                </strong>
+            </h1>
+            <p>
+                Desenvolvido por <a href="https://www.instagram.com/euu_pabloo/">Nike</a> usando linguagens de marcação
+                para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
+                    Digitais</a>
+            </p>
     </footer>
 </body>
 
