--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
 
 <body>
     <main>
-        <h1>
-            <strong> NIKE</strong> <br>
-            Desenvolvedor de Sistemas
-        </h1>
-        <p>
-            Clique aqui para ter mais informações
-        </p>
-        <a href="https://iplogger.com/2gnLZ3">
-            <button type="button" id="ixd01">
-                Portifolio
-            </button>
-        </a>
+        <section>
+            <picture id="digital">
+                <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                    <img src="digital.png" alt="digital">
+                </a>
+                <legend>
+                    NIKE
+                </legend>
+            </picture>
+            <article>
+            <h1>
+                Desenvolvedor de Sistemas
+            </h1>
+            </article>
+            <article>
+                <p>
+                    Clique aqui para ter mais informações
+                </p>
+                <a href="https://iplogger.com/2gnLZ3">
+                    <button type="button" id="ixd01">
+                        Portifolio
+                    </button>
+                </a>
+            </article>
+        </section>
     </main>
     <footer>
         <article>
