--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>
                     Clique aqui para ter mais informações
                 </p>
-                <a href="https://iplogger.com/2gnLZ3">
+                <a href="https://iplis.ru/meu-portifolio">
                     <button type="button" id="ixd01">
                         Portifolio
                     </button>
